main.css
*{margin: 0;}
html,body {margin: 0; height: 100%; width: 100%; background-color:#12171d;/*oldcolorwas12161c*/}
body {
  display: flex;
  flex-direction: column;
  overflow-x: hidden; /*prevent horizontal scroll bar*/
}

/*nav*/

#navsecondary {
  align-self: end;
  margin-right: 5%;
}

#navprimary {
  margin-left:5%;
  margin-right:5%;
  margin-top: -12%;
  margin-bottom: 5%;
  display: flex;
  flex-direction: row;
}
nav button{flex-grow:1; z-index:11;}
.nav {z-index: 10;} 
/*TODO - fix buttons so that the tree transform scale doesn't block them from being used, as z-index doesn't seem to actually put them over the tree img in terms of being clickable*/

/*header*/

header {
  width: 95%; 
  display: grid;
  grid-template: 100%/100%;
}
header>.logo {width: 100%; grid-area: 1/1/1/1; margin:0; padding:0;border:0;} /*use grid to overlap the imgs by forcing into the same grid space*/
header>div {display: flex;justify-content: center; aspect-ratio: 1350/638;} /*aspect ratio set to match roots img so they stay the same size overlayed on eachother when the viewport changes*/
#roots {z-index: 1;}
#tree {
  flex:none; height: 70%; z-index: 2;
  transition: transform .5s ease-in-out;
  /*TODO: input a growth transition CSS animation here*/ 
}
#tree:hover {
  transform: scale(1.2) translateY(-5%); /*translate added to offset the growth of the tree to make sure the roots still look connected*/
} 



h1{position: relative; height: 1lh; top: 35%; left:3%; font-size: 9vw; color:#e3f5ff; z-index: 3;}

/*TODO: fix styling of header so its elements can be zoomed*/
/*TODO: fix header tree and h1 so that the tree is below the text but can be hovered easily without the text getting in the way at all
-possible fix could be to just have the image on top but alter it so that the tree forms a "t" to blend it in with the text*/


/*sections*/
section {width: 100%; height:fit-content;}

/*section - mission statement*/
#highlight {
  width: 100%;
  aspect-ratio: 1350/1410; /*aspect ratio matches background image*/
  margin-top: -50px;
  margin-bottom: -33%;
  z-index: 3;
}
#highlight>img{
  aspect-ratio:1350/1410;
  width: 100%;
  z-index: 3;
  position: absolute;

}
.highlightitem {margin: 0; z-index: 4;}

/*section - highlight reel*/

/*section - swirl animated buttons*/

#swirl-container{display:flex; width: 100%; z-index: 1;}
#swirl-container>img{flex:1; max-width: 33%; z-index: 1;}

/*TODO - change width of all container elements (or just the html/body elements?) to a query based size so that the containers and their children can be zoomed - changing just the container this way should work, as the children are percentages of the container size not the viewport*/


#STARTEST {
  width:100%;
  aspect-ratio:456/347;
  background-image: url(/images/starV1frame1.png);
  background-repeat: no-repeat;
}

#STARTEST>img {
  visibility:hidden;
  opacity: 0;
  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;

}

#STARTEST:hover>img{
  visibility: visible;
  opacity: 1;
  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
}


#STARTEST2 {
  width:100%;
  aspect-ratio:456/347;
  background-image: url(/images/starV1frame1.png);
  background-repeat: no-repeat;
}

#STARTEST2>img{
  animation: .75s startest2 infinite alternate;
}

@keyframes startest2 {
  0%{opacity: 0;visibility:hidden;}
  100%{opacity: 1;visibility: visible;}
}

